--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -120,7 +120,36 @@
     }
    ],
    "source": [
-    "bat.L_l(1,233,3,4,5,3,4,5,3,3,4,5,3,2,3,4)\n"
+    "bat.L_l(1,233,3,4,5,3,4,5,3,3,4,5,3,2,3,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-115894.21082303333"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bat.H_l(1,233,3,43,5,3,49,59,93,93,4,5,3,21,2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test q_rhs_H_l_nou, and p_rhs_H_l_nou"
    ]
   },
   {
@@ -133,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "-115894.21082303333"
+       "array([ 9, 10])"
       ]
      },
      "execution_count": 7,
@@ -142,7 +171,51 @@
     }
    ],
    "source": [
-    "bat.H_l(1,233,3,43,5,3,49,59,93,93,4,5,3,21,2,3)\n"
+    "np.concatenate([np.array([9]),np.array([10])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 58, -54])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bat.q_rhs_H_l_nou(1,233,3,43,5,3,49,59,93,93,4,5,3,21,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  0])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bat.p_rhs_H_l_nou(1,233,3,43,5,3,49,59,93,93,4,5,3,21,2)"
    ]
   },
   {
