--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -329,15 +329,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### write qp_rhs and write a test for H_D"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -580,25 +571,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1, -3,  3, -1])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "bat.qp_rhs_H_mf(2,3,4,1, 2,3,4,1, 2,3,4,1, 2,3,4,3)"
+    "### write u_rhs and test with numerical propagator"
    ]
   },
   {
